# Laboratorios-AyEII

Labo 1/ejercitacion_compilacion_testing/src/: Funciones.cpp  Funciones.h  Meses.h  Periodo.h
Labo 1/ejercitacion_compilacion_testing/tests/: ej_testing.cpp
Labo 1/ejercitacion_uso_clases/: CMakeLists.txt
Labo 1/ejercitacion_uso_clases/src/: funciones.cpp
Labo 2/ejercitacion_definicion_clases/: CMakeLists.txt
Labo 2/ejercitacion_definicion_clases/src/: Geometria.cpp  Juego.cpp  Recordatorios.cpp
Labo 3/ejercitacion_punteros/src/: Proxy.h  Proxy2.cpp  SistemaDeMensajes.cpp  SistemaDeMensajes.h  SistemaDeMensajesPiru.cpp  SistemaDeMensajesPiru.h
Labo 3/ejercitacion_punteros/tests/: sdm_tests.cpp
Labo 4/ejercitacion listas/alumnos/src/: Lista.h  Lista.hpp
Labo 5/ejercitacion_templates_corregida/src/: Diccionario.cpp  Diccionario.hpp  Templates.cpp  Templates.hpp
Labo 6/taller_conjunto_sobre_ABB/src/: Conjunto.h  Conjunto.hpp
Labo 6/taller_conjunto_sobre_ABB/tests/: conjunto-tests.cpp
Labo 7/ejercitacion-trie/src/: string_map.h  string_map.hpp
Labo 7/ejercitacion-trie/tests/: string_map_tests.cpp
Template Proyecto Test Cases/: CMakeLists.txt  main.cpp
Template Proyecto Test Cases/src/: ejemplo.cpp  ejemplo.h
Template Proyecto Test Cases/test/: testEjemplo.cpp
